Bug/128 sidebar cutoff (#145)
* fixed global sub menu to be a row instead of column for large view

* fixed sub nav bar styles for large view  and edit notification pointer to correct location

--- a/src/shell/components/global-actions/components/global-notifications/GlobalNotifications.less
+++ b/src/shell/components/global-actions/components/global-notifications/GlobalNotifications.less
@@ -5,7 +5,7 @@
   position: fixed;
   z-index: 100;
   bottom: 110px;
-  left: 200px;
+  left: 85px;
   color: @zesty-dark-blue;
 
   ul {
@@ -31,9 +31,10 @@
   .caret {
     color: @zesty-field-blue;
     position: absolute;
-    bottom: -4.5px;
-    left: -14.5px;
-    transform: rotate(90deg);
+    bottom: -15px;
+    left: 5px;
+    width: 24px;
+    height: 24px;
   }
 }
 
@@ -43,8 +44,8 @@
 
 @media (max-width: 2000px) {
   .notices {
-    left: 60px;
-    bottom: 105px;
+    left: 53px;
+    bottom: 108px;
 
     .caret {
       left: -11px;
